[package]
name = "cachier-rust"
version = "0.1.0-beta.0"
authors = ["apinanyogaratnam"]
edition = "2021"
license = "MIT"
repository = "https://github.com/apinanyogaratnam/mathemizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
tokio = "1.23.0"
