[package]
name = "cachier"
version = "0.1.0-beta.2"
authors = ["apinanyogaratnam"]
description = "A library for connecting to the Cachier server"
edition = "2021"
license = "MIT"
repository = "https://github.com/apinanyogaratnam/cachier-rust"
readme = "README.md"
keywords = ["cache", "cachier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros"] }
